[gd_scene load_steps=6 format=2]

[ext_resource path="res://PlayerShip/PlayerShip.tscn" type="PackedScene" id=1]
[ext_resource path="res://Camera2D.gd" type="Script" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://UI/GameUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://CargoShip/CargoShip.tscn" type="PackedScene" id=5]

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -560.0
margin_top = -268.0
margin_right = 1022.0
margin_bottom = 742.0
color = Color( 0, 0, 0, 1 )

[node name="PlayerShip" parent="." instance=ExtResource( 1 )]
position = Vector2( 228, 237 )

[node name="Camera2D" type="Camera2D" parent="PlayerShip"]
current = true
script = ExtResource( 2 )

[node name="ShakeTimer" type="Timer" parent="PlayerShip/Camera2D"]
wait_time = 0.5
one_shot = true

[node name="CargoShip" parent="." instance=ExtResource( 5 )]

[node name="GameUI" parent="." instance=ExtResource( 4 )]

[node name="AsteroidTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="AsteroidTimer" to="." method="_on_AsteroidTimer_timeout"]
